--- a/MP3_Final/MP3_Final/MainWindow.xaml
+++ b/MP3_Final/MP3_Final/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MP3_Final"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1080" WindowStartupLocation="CenterScreen">
     <Grid x:Name="Music_Player">
