--- a/MP3_Final/MP3_Final/App.xaml
+++ b/MP3_Final/MP3_Final/App.xaml
@@ -151,12 +151,12 @@
 
             </Style>
 
-            <Style x:Key="IconButton" TargetType="Button">
+            <Style x:Key="optionButton" TargetType="Button">
                 <Setter Property="Background" Value="Transparent"/>
                 <Setter Property="Foreground" Value="#ffffff"/>
                 <Setter Property="Width" Value="40"/>
                 <Setter Property="Height" Value="40"/>
-                <Setter Property="Margin" Value="30 20 10 0"/>
+                <Setter Property="Margin" Value="10 0"/>
                 <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
                 <Setter  Property="Template">
                     <Setter.Value>
@@ -170,10 +170,16 @@
 
                 <Style.Triggers>
                     <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Background" Value="#f0f0f0"/>
+                        <Setter Property="Background" Value="#f0f0f0" />
                         <Setter Property="Foreground" Value="#f0f0f0"/>
                     </Trigger>
                 </Style.Triggers>
+            </Style>
+            <Style x:Key="optionButtonIcon" TargetType="materialDesign:PackIcon">
+                <Setter Property="Width" Value="40"/>
+                <Setter Property="Height" Value="40"/>
+                <Setter Property="Foreground" Value="#00a85b"/>
+
             </Style>
         </ResourceDictionary>
 
