--- a/Mp3/MP3_Final/App.xaml
+++ b/Mp3/MP3_Final/App.xaml
@@ -17,7 +17,7 @@
                 <Setter Property="Background" Value="#02be68"/>
                 <Setter Property="Foreground" Value="Black"/>
                 <Setter Property="Height" Value="50"/>
-                <Setter Property="Margin" Value="30 3 0 3"/>
+                <Setter Property="Margin" Value="10"/>
                 <Setter Property="FontSize" Value="25"/>
                 <Setter Property="FontWeight" Value="Bold"/>
                 <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -45,7 +45,7 @@
                 <Setter Property="Background" Value="#02be68"/>
                 <Setter Property="Foreground" Value="White"/>
                 <Setter Property="Height" Value="50"/>
-                <Setter Property="Margin" Value="30 3 0 3"/>
+                <Setter Property="Margin" Value="10"/>
                 <Setter Property="FontSize" Value="30"/>
                 <Setter Property="FontWeight" Value="Bold"/>
                 <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -125,7 +125,7 @@
                 <Setter Property="Foreground" Value="#ffffff"/>
                 <Setter Property="Width" Value="40"/>
                 <Setter Property="Height" Value="40"/>
-                <Setter Property="Margin" Value="15 0 0 20"/>
+                <Setter Property="Margin" Value="15 0 0 0"/>
                 <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
                 <Setter  Property="Template">
                     <Setter.Value>
