--- a/Mp3/MP3_Final/UserControls/SongName.xaml
+++ b/Mp3/MP3_Final/UserControls/SongName.xaml
@@ -1,5 +1,4 @@
-﻿
-<UserControl 
+﻿<UserControl 
              x:Class="MP3_Final.UserControls.SongName"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,8 +8,10 @@
              xmlns:local="clr-namespace:MP3_Final.UserControls"
              mc:Ignorable="d"
              Name="songName">
-    <Border Margin="0 0 0 3" CornerRadius="5" Padding="7">
+    <Border
+        x:Name="BdSongName" Margin="0 0 0 3" CornerRadius="5" Padding="7">
         <Border.Style>
+
             <Style TargetType="Border">
                 <Style.Triggers>
                     <Trigger Property="IsMouseOver" Value="True">
@@ -24,19 +25,20 @@
             </Style>
         </Border.Style>
 
+
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="40"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock Text="{Binding ElementName=songName, Path=Number}" Foreground="#c2e8dc" FontSize="16" FontWeight="SemiBold" Margin="5 0 30 0" VerticalAlignment="Center"/>
-            <TextBlock Text="{Binding ElementName=songName, Path=Title}" Grid.Column="1" Foreground="White" FontSize="16" FontWeight="SemiBold" VerticalAlignment="Center"/>
-            <TextBlock Text="{Binding ElementName=songName, Path=Singer}" Grid.Column="2" Foreground="White" FontSize="16" FontWeight="SemiBold" VerticalAlignment="Center"/>
-            <TextBlock Text="{Binding ElementName=songName, Path=Time}" Grid.Column="3" Foreground="#c2e8dc" FontSize="16" FontWeight="SemiBold" Margin="0 0 5 0" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding ElementName=songName, Path=Number}" Foreground="{StaticResource color2}" FontSize="14" FontWeight="SemiBold" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding ElementName=songName, Path=Title}" Grid.Column="1" Foreground="{StaticResource color2}" FontSize="14" FontWeight="SemiBold" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding ElementName=songName, Path=Singer}" Grid.Column="2" Foreground="{StaticResource color2}" FontSize="14" FontWeight="SemiBold" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding ElementName=songName, Path=Time}" Grid.Column="3" Foreground="{StaticResource color2}" FontSize="14" FontWeight="SemiBold" VerticalAlignment="Center"/>
 
             <ToggleButton Name="editTgBtn" Grid.Column="4"  VerticalAlignment="Center">
                 <materialDesign:PackIcon Kind="DotsVertical" Width="25" Height="25" Foreground="#f1f1f1"/>
@@ -63,11 +65,11 @@
                 </ToggleButton.Style>
             </ToggleButton>
 
-            <Popup IsOpen="{Binding IsChecked, ElementName=editTgBtn}" AllowsTransparency="True" StaysOpen="False" PlacementTarget="{Binding ElementName=editTgBtn }" Placement="Right" VerticalOffset="20" HorizontalOffset="-15">
+            <Popup x:Name="playlistPopup" IsOpen="{Binding IsChecked, ElementName=editTgBtn}" AllowsTransparency="True" StaysOpen="False" PlacementTarget="{Binding ElementName=editTgBtn }" Placement="Left" VerticalOffset="25" HorizontalOffset="10">
                 <Border Background="White" CornerRadius="5" Padding="0 4">
                     <StackPanel>
-                        <local:EditPlaylistButton Icon="PlaylistPlus" Function="Add album"/>
-                        <local:EditPlaylistButton Icon="Delete" Function="Delete"/>
+                        <local:EditPlaylistButton x:Name="AddAlbumBtn" Icon="PlaylistPlus" Function="Add album" PopupClick="AddAlbumBtn_PopupClick"/>
+                        <local:EditPlaylistButton x:Name="DelSongBtn" Icon="Delete" Function="Delete" PopupClick="DelSongBtn_PopupClick"/>
                     </StackPanel>
                 </Border>
             </Popup>
